--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,8 @@ dependencies:
   shared_preferences: ^2.2.0  # Untuk penyimpanan lokal
   http: ^1.1.0  # Untuk network requests
   intl: ^0.18.1 
-
+  go_router: ^12.1.1 
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
