--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   logger: ^2.0.2+1
   google_sign_in: ^6.3.0
   provider: ^6.1.5
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_test:
