--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: '>=3.2.3 <4.0.0'
   flutter: ">=3.16.0"
 
 dependencies:
@@ -13,10 +13,11 @@ dependencies:
     sdk: flutter
 
   # Navigation
-  go_router: ^12.1.3
+  go_router: ^13.2.0
 
   # State Management
   flutter_riverpod: ^2.4.9
+  provider: ^6.1.1
 
   # Dependency Injection
   get_it: ^7.6.4
@@ -25,6 +26,9 @@ dependencies:
   # Network
   dio: ^5.4.0
   retrofit: ^4.0.3
+  http: ^1.2.0
+  http_parser: ^4.0.2
+
   # Code Generation
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
@@ -36,23 +40,24 @@ dependencies:
   # UI
   flutter_screenutil: ^5.9.0
   cached_network_image: ^3.3.0
-
+  image_picker: ^1.0.7
 
   fl_chart: ^1.0.0
+
   # Utils
   intl: ^0.18.1
   logger: ^2.0.2+1
   google_sign_in: ^5.0.0
-  provider: ^6.1.5
   flutter_dotenv: ^5.2.1
+  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.1
+  flutter_lints: ^2.0.0
   
   # Code Generation
-  build_runner: ^2.4.7
+  build_runner: ^2.4.8
   freezed: ^2.4.6
   json_serializable: ^6.7.1
   injectable_generator: ^2.4.1
