--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,11 +22,12 @@ dependencies:
   dio: ^5.4.0
 
   # Authentication
-  google_sign_in: ^6.2.1
 
   # Local Storage
   shared_preferences: ^2.5.3
   flutter_secure_storage: ^9.0.0
+  sqflite: ^2.3.0
+  path: ^1.8.3
   # UI
   flutter_screenutil: ^5.9.0
   cached_network_image: ^3.3.0
@@ -38,6 +39,7 @@ dependencies:
   firebase_core: ^3.10.1
   firebase_auth: ^5.4.1
   firebase_messaging: ^15.1.1
+  flutter_local_notifications: ^19.2.1
 
   # Utils
   intl: ^0.20.2
@@ -46,8 +48,6 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
   flutter_lints: ^2.0.0
 
 flutter:
