--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
 
   # Network
   dio: ^5.4.0
+  http: ^1.1.0
+  connectivity_plus: ^6.0.5
 
   # Authentication
 
@@ -27,6 +29,7 @@ dependencies:
   shared_preferences: ^2.5.3
   flutter_secure_storage: ^9.0.0
   sqflite: ^2.3.0
+  sqflite_common_ffi: ^2.3.2  # Tambahkan ini
   path: ^1.8.3
   # UI
   flutter_screenutil: ^5.9.0
