--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,7 +1,8 @@
-org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
+org.gradle.jvmargs=-Xmx4096m -XX:MaxMetaspaceSize=1024m -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
-org.gradle.daemon=false
-org.gradle.parallel=true
-org.gradle.configureondemand=true
+org.gradle.daemon=true
+org.gradle.parallel=false
+org.gradle.configureondemand=false
 org.gradle.caching=true
+org.gradle.workers.max=2
